# c-voxel

./: .gitignore  CMakeLists.txt  README.md  run.sh  todo.md
src/: bitmap.c  chunk.c  engine.c  gl.c  main.c  misc.c  noise.c  perlin.c  player.c  shader.c  string.c  text.c  vector.c  world.c
src/glad/: gl.h
src/shaders/: basic.frag  basic.vert  basic_frag.glsl  basic_vert.glsl
